# ai-engineering-bootcamp-101

./: .env.example  .gitignore  Dockerfile  Dockerfile.fastapi  Makefile  PROJECT_CANVAS.md  README.md  docker-compose.yml  pyproject.toml
evals/: eval_retriever.py
notebooks/: 00-explore-llm-calls.ipynb  01-explore-amazon-dataset.ipynb  02-RAG_preprocessing.ipynb  03-evaluation-dataset.ipynb  04-hybrid-search.ipynb
src/api/: main.py
src/api/api/: endpoints.py  middleware.py  models.py
src/api/core/: config.py
src/api/rag/: retrieval.py
src/api/rag/prompts/: rag_generation.yaml
src/api/rag/utils/: utils.py
src/chatbot-ui/: streamlit_app.py
src/chatbot-ui/core/: config.py
src/chatbot_ui/: retrieval.py  streamlit_app.py
src/chatbot_ui/core/: config.py
